_build/html/reports/tutorials/train-test-model.err.log
Traceback (most recent call last):
  File "C:\Users\37359\AppData\Roaming\Python\Python310\site-packages\jupyter_cache\executors\utils.py", line 58, in single_nb_execution
    executenb(
  File "C:\ProgramData\anaconda3\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\ProgramData\anaconda3\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\ProgramData\anaconda3\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\ProgramData\anaconda3\lib\asyncio\base_events.py", line 649, in run_until_complete
    return future.result()
  File "C:\ProgramData\anaconda3\lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "C:\ProgramData\anaconda3\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\ProgramData\anaconda3\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
> å¯ä»¥å‘ç°ä¸åŒçš„MASKå¯¹æ¨¡å‹çš„å½±å“éå¸¸å¤§ï¼Œæœ‰äº›ç”šè‡³ä¼šè®©æ¨¡å‹è¾“å‡ºæ— æ„ä¹‰çš„å›¾åƒã€‚
------------------

[1;36m  Cell [1;32mIn[4], line 1[1;36m[0m
[1;33m    > å¯ä»¥å‘ç°ä¸åŒçš„MASKå¯¹æ¨¡å‹çš„å½±å“éå¸¸å¤§ï¼Œæœ‰äº›ç”šè‡³ä¼šè®©æ¨¡å‹è¾“å‡ºæ— æ„ä¹‰çš„å›¾åƒã€‚[0m
[1;37m                          ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid character 'ï¼Œ' (U+FF0C)

SyntaxError: invalid character 'ï¼Œ' (U+FF0C) (4216279462.py, line 1)

